# lucky-trading-scripts

./: .gitignore  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  pytest.ini
config/: config.example.toml
core/: __init__.py  indicators.py  notify.py  state.py  types.py
luckytrader/: __init__.py  backtest.py  backtest_engine.py  chart.py  config.py  execute.py  indicators.py  monitor.py  optimize.py  regime.py  signal.py  strategy.py  trade.py  trailing.py  ws_monitor.py
okx_bb/: __init__.py  __main__.py  backtest.py  cleanup.py  config.py  exchange.py  executor.py  okx-bb-monitor.service  state  strategy.py  ws_monitor.py
okx_bb/config/: .okx_config.sample  config.toml.sample
okx_bb/tests/: conftest.py  test_backtest_consistency.py  test_config_execution.py  test_core_indicators.py  test_exchange.py  test_executor.py  test_no_duplication.py  test_strategy.py  test_ws_monitor.py
tests/: conftest.py  test_backtest.py  test_backtest_single_position.py  test_close_and_cleanup.py  test_close_position_retry.py  test_config.py  test_critical_paths.py  test_dry_run.py  test_early_validation_e2e.py  test_emergency_close.py  test_execute_signal.py  test_execute_signal_extended.py  test_indicators.py  test_lookback_window.py  test_low_hanging.py  test_market_check.py  test_optimize_no_write.py  test_orphan_reconcile.py  test_regime.py  test_signal_check.py  test_signal_check_extended.py  test_signal_range_slice.py  test_trailing_fixes.py  test_trailing_stop.py  test_trailing_stop_extended.py  test_ws_monitor_fixes.py
